chore: update secret templates to include namespace and adjust path in ArgoCD ApplicationSet

--- a/argocd/applicationsets/templates/appset-alpha.yaml
+++ b/argocd/applicationsets/templates/appset-alpha.yaml
@@ -30,7 +30,7 @@ spec:
       source:
         repoURL: "{{ $.Values.repositoryUrl }}"
         targetRevision: "{{ $.Values.targetRevision }}"
-        path: "apps/dev/{{ $team }}/{{ printf "{{.path }}"}}"
+        path: "{{ printf "{{.path }}"}}"
         helm:
           valueFiles:
             - values.yaml
