--- a/apps/sbx/alpha/billing/templates/secret.yaml
+++ b/apps/sbx/alpha/billing/templates/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: billing-secret
+  namespace: {{ .Release.Namespace }}
   labels:
     app: billing
 stringData:
