--- a/apps/sbx/alpha/webapp/templates/secret.yaml
+++ b/apps/sbx/alpha/webapp/templates/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: webapp-secret
+  namespace: {{ .Release.Namespace }}
   labels:
     app: webapp
 stringData:
