feat: add Helm charts and secrets for billing and webapp services, and update ApplicationSet with mixed team annotations

--- a/argocd/applicationsets/values.yaml
+++ b/argocd/applicationsets/values.yaml
@@ -13,3 +13,9 @@ teams:
           custom.annotation.io/team: alpha
   - name: no-annotations
     apps: {}
+  - name: mixed
+    apps:
+      billing:
+        annotations:
+          custom.annotation.io/component: payment
+          custom.annotation.io/team: mixed
