chore: remove obsolete ApplicationSet configurations and add .gitignore for temporary and log files

--- a/argocd/applicationsets/values.yaml
+++ b/argocd/applicationsets/values.yaml
@@ -2,7 +2,7 @@ repositoryUrl: git@github.com:lucmahoux/poc-template-appset-argocd.git
 targetRevision: main
 
 teams:
-  - name: annotation
+  - name: annotations
     apps:
       webapp:
         annotations:
