feat: add billing deployment and update image configurations
Introduced a new billing deployment with sidecar support in deployment.yaml. Added image configurations for both billing and sidecar images in values.yaml. Removed the obsolete secret.yaml file. Updated ArgoCD annotations for image management.

--- a/argocd/applicationsets/values.yaml
+++ b/argocd/applicationsets/values.yaml
@@ -16,8 +16,21 @@ teams:
           argocd-image-updater.argoproj.io/webapp.allow-tags: regexp:^sha-[0-9a-f]{7}$
       billing:
         annotations:
-          custom.annotation.io/component: payment
-          custom.annotation.io/team: alpha
+          argocd-image-updater.argoproj.io/image-list: |
+            webapp=loibinomiale/nginx
+            sidecar=loibinomiale/hello-world
+
+          argocd-image-updater.argoproj.io/webapp.helm.image-name: image.repository
+          argocd-image-updater.argoproj.io/webapp.helm.image-tag: image.tag
+          argocd-image-updater.argoproj.io/webapp.allow-tags: regexp:^rc-.*$
+          argocd-image-updater.argoproj.io/webapp.update-strategy: newest-build
+
+          argocd-image-updater.argoproj.io/sidecar.helm.image-name: sidecarImage.repository
+          argocd-image-updater.argoproj.io/sidecar.helm.image-tag: sidecarImage.tag
+          argocd-image-updater.argoproj.io/sidecar.allow-tags: regexp:^v.*$
+          argocd-image-updater.argoproj.io/sidecar.update-strategy: newest-build
+
+    argocd-image-updater.argoproj.io/write-back-method: git
   - name: no-annotations
     apps: {}
   - name: mixed
