--- a/apps/sbx/annotations/billing/templates/deployment.yaml
+++ b/apps/sbx/annotations/billing/templates/deployment.yaml
@@ -17,3 +17,5 @@ spec:
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
         - name: sidecar
           image: {{ .Values.sidecarImage.repository }}:{{ .Values.sidecarImage.tag }}
+          ports:
+            - containerPort: 8001
